Refactor code
Signed-off-by: Aditya Verma <aditya17009@iiitd.ac.in>